[package]
name = "ant-system"
version = "0.1.0"
authors = [ "Kevin Del Castillo <quebin31@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
indicatif = "0.15.0"
ndarray = "0.13.1"
prettytable-rs = "0.8.0"
rand = "0.7.3"
